fix(mon-pix): replace '$spacing-*' with '$pix-spacing-*'

--- a/mon-pix/app/styles/components/_challenge-statement.scss
+++ b/mon-pix/app/styles/components/_challenge-statement.scss
@@ -188,7 +188,7 @@
 .challenge-statement__action-link {
   width: 156px;
   height: 46px;
-  margin-bottom: $spacing-m;
+  margin-bottom: $pix-spacing-m;
   color: $pix-neutral-0;
   text-align: center;
   background-color: $pix-primary;
