--- a/mon-pix/app/styles/pages/_fill-in-participant-external-id.scss
+++ b/mon-pix/app/styles/pages/_fill-in-participant-external-id.scss
@@ -59,7 +59,7 @@
 .fill-in-participant-external-id__form-field input {
   width: 232px;
   height: 43px;
-  margin-right: $spacing-xs;
+  margin-right: $pix-spacing-xs;
   padding: 4px 8px;
   border: solid 2px $pix-neutral-20;
   border-radius: 3px;
